# research-agentic_salmonella_langgraph

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.bak  README.md  config.py  config.toml  docker-run.sh  dockertips.md  helpers.py  load_env.py  main.py  output_schemas.py  planner.py  pyproject.toml  readme.md  requirements.txt  sandbox.ipynb  test_output.txt  todo.md  tools.py  utils.py
commands/: download_data.py
config/: config.py  config.toml  load_env.py
core/: main.py  system.py
data/: Q_dataset.json
docs/: README.md  docker_usage.md  dockerfile_design.md  workflow.dot  workflow.mmd
docs/aws/: README.md
experiments/: 00.py  hello.py  test_system.py
nodes/: __init__.py  aggregator.py  executor.py  explorer.py  formatter.py  planner.py  router.py  saver.py  serotype.py
notebooks/: sandbox.ipynb  test_package_manager.ipynb  test_python_repl.ipynb
schemas/: output_schemas.py  state.py
scratch/: mp.ipynb
scripts/: docker_dev.sh  docker_dev.sh.bak  docker_prod.sh  docker_prod.sh.bak  run.sh
scripts/run_scripts/: run.sh  run_docker.sh  run_tests.sh
scripts/try_scripts/: bedrock-langchain.py  try_ast_utils.py
sparq/core/: main.py  system.py
sparq/nodes/: aggregator.py  executor.py  formatter.py  router.py  (+2 more)
src/: __main__.py
sys_messages/: executor_message.txt  explorer_message.txt  planner_message.txt  router_message.txt  serotype_message.txt
tests/: awsbedrock.py  test_awsbedrock.py  test_get_llm.py
tools/: python_repl_tool.py  python_repl_tool.py.bak  tools.py
utils/: download_data.py  helpers.py  readme.md
(+54 files in other folders)
